--- a/random_images.css
+++ b/random_images.css
@@ -23,4 +23,21 @@ h3 {
 	text-align:center;
 }
 
+button {
+	background-color: light blue;
+    border: 5px solid #021a40;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: auto;
+    cursor: pointer;
+}
+
+p {
+	text-align: center;
+}
+
 	
